@@ -172,7 +172,7 @@ Rivet_SendContent(rivet_thread_private *private)
                 scripts = Rivet_RunningScripts (private->pool,scripts,newconfig);
 
                 apr_hash_set (interp_obj->per_dir_scripts,rdc->path,strlen(rdc->path),scripts);
-               
+
                 private->running = scripts;
             }
         }
